# AILeadGeneration

./: .gitignore  docker-compose.postgres.yml  package-lock.json
aileadgen-api/: alembic.ini  main.py  pyproject.toml  seed_demo.py
aileadgen-api/aileadgen_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aileadgen-api/app/core/: config.py  database.py  security.py
aileadgen-api/app/dependencies/: auth.py  db.py
aileadgen-api/app/models/: __init__.py  entities.py
aileadgen-api/app/routers/: __init__.py  auth.py  automation.py  crm.py  icp.py  insights.py  leads.py  signals.py  users.py
aileadgen-api/app/schemas/: auth.py  automation.py  common.py  crm.py  email_types.py  icp.py  insights.py  leads.py  signals.py  users.py
aileadgen-api/app/services/: __init__.py  auth_service.py  automation_service.py  crm_service.py  icp_service.py  insights_service.py  leads_service.py  signals_service.py  users_service.py
aileadgen-api/app/utils/: response.py
aileadgen-api/migrations/: env.py
aileadgen-api/migrations/versions/: 20260407_01_initial.py  20260407_02_automation_pipeline.py  20260407_03_automation_config_fields.py
aileadgen-ui/: components.json  middleware.ts  package-lock.json  package.json
aileadgen-ui/app/: globals.css  layout.tsx
aileadgen-ui/app/automation/: layout.tsx  page.tsx
aileadgen-ui/hooks/: use-auth.ts  use-automation.ts  use-insights.ts  use-leads.ts
aileadgen-ui/lib/: avatar-styles.ts  lead-segment.ts
aileadgen-ui/providers/: lead-search-provider.tsx
aileadgen-ui/types/: api.ts
scripts/: ingest_demo_data.py
(+28 files in other folders)
